testsuite/tests/typing-objects-bugs/pr4824a_bad.compilers.reference
File "pr4824a_bad.ml", line 10, characters 2-45:
10 |   struct class c x = object val x = x end end
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Signature mismatch:
       ...
       Try changing class c to be a
       class c : 'a -> object val x : 'b end
